commentaire admin ejs ajouter + css dans chaque fichier correpsondant

--- a/public/CSS/planning.scss
+++ b/public/CSS/planning.scss
@@ -257,7 +257,7 @@ thead {
     }
 }
 
-// Labels des heures (colonne de gauche) - Style minimaliste moderne
+// TIME colonne de gauche
 .fc-timegrid-axis-frame {
     background: $white!important;
     border-radius: 0 15px 15px 0 !important;
