--- a/views/pages/planning.ejs
+++ b/views/pages/planning.ejs
@@ -1,6 +1,11 @@
-<!-- TODO : HEADER -->
+<!-- START STYLES -->
+<link rel="stylesheet" href="/CSS/planning.css">
+<!-- END STYLES -->
+
+
+<!-- START CONTENT -->
 <div class="calendar-page">
-    <!-- Header de la page -->
+    <!-- ! START HEADER -->
     <div class="calendar-header">
         <div class="header-content">
             <div class="title-section">
@@ -14,8 +19,9 @@
             </div>
         </div>
     </div>
+    <!-- ! END HEADER -->
 
-    <!-- Contenu principal de la page -->
+    <!-- ! START CALENDAR -->
     <div class="calendar-container">
         <div class="calendar-toolbar">
             <div class="toolbar-left">
@@ -32,7 +38,14 @@
 
         <div id="calendar"></div>
     </div>
+    <!-- ! END CALENDAR -->
 </div>
+<!--  END CONTENT -->
 
+<!-- START MODAL -->
+<!-- END MODAL -->
+
+<!-- START SCRIPTS -->
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js"></script>
 <script src="/JS/configCalendar.js"></script>
+<!-- END SCRIPTS -->
