FINALISATION COMMENTAIRE ET TRANSFERT DES CSS PAR FICHIER

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,18 @@
+<!-- START STYLES -->
+<link rel="stylesheet" href="/CSS/login.css">
+<!-- END STYLES -->
+
+<!-- START CONTENT -->
 <div class="login-page">
     <div class="container-fluid p-0 vh-100">
         <div class="row g-0 h-100">
-            
-            <!-- Logo en haut à gauche (desktop) / centré (mobile/tablette) -->
+            <!-- ! START SECTION LOGO -->
             <div class="login-logo">
                 <img src="/ASSET/img/Logo_Beige.svg" alt="Logo" class="login-logo-img">
             </div>
+            <!-- ! END SECTION LOGO -->
 
-            <!-- Côté gauche : Formulaire de connexion -->
+            <!-- ! START SECTION FORMULAIRE -->
             <div class="col-lg-6 col-md-7 d-flex align-items-center justify-content-center bg-light">
                 <div class="login-form-container p-5" style="max-width: 400px; width: 100%;">
 
@@ -66,13 +71,15 @@
                             </div>
                 </div>
             </div>
+            <!-- ! END SECTION FORMULAIRE -->
 
-            <!-- Côté droit : Image -->
+            <!-- ! START SECTION IMAGE -->
             <div class="col-lg-6 col-md-5 p-0 position-relative d-none d-md-block">
                 <div class="login-image-container h-100">
                     <img src="/ASSET/img/4200743.jpg" alt="Connexion utilisateur" class="login-background-image">
                 </div>
             </div>
-
+            <!-- ! END SECTION IMAGE -->
         </div>
-    </div>
+</div>
+<!-- END CONTENT -->
