--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
 
-    <!-- * Link -->
-        <!-- ! Bootstrap et Bootstrap Icons -->
+    <!-- START LINK -->
+        <!-- ! START BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+        <!-- ! END BOOTSTRAP -->
 
-        <!-- ! Font Awesome -->
+        <!-- ! START FONT AWESOME -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" crossorigin="anonymous">
+        <!-- ! END FONT AWESOME -->
 
-        <!-- ! FullCalendar -->
-        <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/main.min.css" rel="stylesheet" />
+        <!-- ! START FULLCALENDAR -->
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/main.min.css" rel="stylesheet" />
+        <!-- ! END FULLCALENDAR -->
 
-        <!-- ! CSS -->
-    <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>                                                  <!-- Permet d'enlever le style pour la page de connexion -->
+        <!-- ! START CSS -->
+    <% var hideLayout = typeof hideLayout !== 'undefined' ? hideLayout : false; %>             <!-- Permet d'enlever le style pour la page de connexion -->
     <% if (!hideLayout) { %>
         <link rel="stylesheet" href="/CSS/style.css">
     <% } %>
+        <!-- ! END CSS -->
 
     <link rel="shortcut icon" href="/ASSET/img/Logo_Beige.svg" type="image/x-icon">
 </head>
 <body>
     <header>
-        <!-- * hideLayout enlevé pour le login -->
         <% if (!hideLayout) { %>
             <%- include('./partials/nav.ejs') %>
         <% } %>
@@ -40,14 +43,14 @@
 
     </aside>
 
-    <!-- * hideLayout enlevé pour le login -->
     <% if (!hideLayout) { %>
         <%- include('./partials/footer.ejs') %>
     <% } %>
 
 
-    <!-- * boostrap script -->
+    <!-- ! START BOOTSTRAP SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <!-- ! END BOOTSTRAP SCRIPT -->
 
 </body>
 </html>
