RANGEMENT DOSSIER CSS

--- a/views/pages/admin/addSalarie.ejs
+++ b/views/pages/admin/addSalarie.ejs
@@ -1,5 +1,5 @@
 <!-- START STYLES -->
-<link rel="stylesheet" href="/CSS/addEmployee.css">
+<link rel="stylesheet" href="/CSS/ADMIN/addEmployee.css">
 <!-- END STYLES -->
 
 <!-- START CONTENT -->
