--- a/views/pages/admin/listingEmployee.ejs
+++ b/views/pages/admin/listingEmployee.ejs
@@ -1,5 +1,5 @@
 <!-- START STYLES -->
-<link rel="stylesheet" href="/CSS/listingEmployee.css">
+<link rel="stylesheet" href="/CSS/ADMIN/listingEmployee.css">
 <!-- END STYLES -->
 
 <!-- START CONTENT -->
