--- a/views/pages/doc.ejs
+++ b/views/pages/doc.ejs
@@ -1,6 +1,6 @@
 <!-- START STYLE -->
-<link rel="stylesheet" href="/CSS/documents.css">
-<link rel="stylesheet" href="/CSS/badgeDoc.css">
+<link rel="stylesheet" href="/CSS/PAGES/documents.css">
+<link rel="stylesheet" href="/CSS/PAGES/badgeDoc.css">
 <!-- END STYLE -->
 
 <!-- START CONTENT -->
