--- a/views/pages/planning.ejs
+++ b/views/pages/planning.ejs
@@ -1,5 +1,5 @@
 <!-- START STYLES -->
-<link rel="stylesheet" href="/CSS/planning.css">
+<link rel="stylesheet" href="/CSS/PAGES/planning.css">
 <!-- END STYLES -->
 
 
