--- a/views/pages/profil.ejs
+++ b/views/pages/profil.ejs
@@ -1,5 +1,5 @@
 <!-- START STYLE -->
-<link rel="stylesheet" href="/CSS/profil.css">
+<link rel="stylesheet" href="/CSS/PAGES/profil.css">
 <!-- END STYLE -->
 
 <!-- START CONTENT -->
