--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <!-- START STYLES -->
-<link rel="stylesheet" href="/CSS/footer.css">
+<link rel="stylesheet" href="/CSS/PARTIALS/footer.css">
 <!-- END STYLES -->
 
 <!-- START FOOTER -->
