--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <!-- START STYLES -->
-<link rel="stylesheet" href="/CSS/navbar.css">
+<link rel="stylesheet" href="/CSS/PARTIALS/navbar.css">
 <!-- END STYLES -->
 
 <!-- START NAVIGATION -->
