modal et modifie import _variables

--- a/public/CSS/PAGES/documents.scss
+++ b/public/CSS/PAGES/documents.scss
@@ -1,4 +1,4 @@
-@import '_variables';
+@import '../variables';
 
 // Variables pour la page des documents
 $card-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
